// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AmountInput/> render() should render with currency symbol on left 1`] = `
<div
  className="container"
>
  <ForwardRef(NumberInput)
    id="amount"
    isDisabled={false}
    isRequired={true}
    min={0}
    onChange={[Function]}
    prefix="$"
    step={0.01}
    value={9.99}
  />
</div>
`;

exports[`<AmountInput/> render() should render with percentage symbol on right 1`] = `
<div
  className="container"
>
  <ForwardRef(NumberInput)
    id="amount"
    isDisabled={false}
    isRequired={true}
    max={100}
    min={0}
    onChange={[Function]}
    step={0.01}
    suffix="%"
    value={25}
  />
</div>
`;
